:sparkles: Feature done
Versioning files done.

--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.html
@@ -5,7 +5,7 @@
             <span class="quantity">{{ cantWO }}</span>
         </div>
 
-        <mat-form-field appearance="outline" [ngClass]="
+        <mat-form-field appearance="fill" [ngClass]="
         isMobile
           ? 'ms-kanban-toolbar__input--mobile'
           : 'ms-kanban-toolbar__input'
