🔨 🎨 column-remaining-days-PPTO-shipment

--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.scss
@@ -113,3 +113,10 @@ td {
 .modified--budget__highlight--row {
   background: #fcf1d2;
 }
+
+.positive-day{
+  color: green;
+}
+.negative-day{
+  color: red;
+}
