--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.html
@@ -208,8 +208,16 @@
           >
             Días restantes envío PPTO
           </th>
-          <td mat-cell *matCellDef="let element" class="table__cell">
+          <td mat-cell *matCellDef="let element" class="table__cell"
+         
+          >
+            <div *ngIf="daysLeft(element) >= 0" class="positive-day">
             {{ daysLeft(element) }}
+            </div>
+
+            <div *ngIf="daysLeft(element) < 0" class="negative-day">
+            {{ daysLeft(element) }}
+            </div>
           </td>
         </ng-container>
 
