:construction: Advance enhacements

--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.scss
@@ -50,6 +50,14 @@ table {
   .observaciones-taller {
     min-width: 500px;
   }
+
+  .cell-sticky-right-limit {
+    border-right: 2px solid lightgrey;
+  }
+
+  .cell-sticky-left-limit {
+    border-left: 2px solid lightgrey;
+  }
 }
 
 th {
