:sparkles: Enhacements done !

--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.scss
@@ -34,11 +34,13 @@
 
 .table-wrapper {
   overflow: auto;
+  max-height: 80vh;
+  margin-top: 1.5em;
 }
 
 table {
-  margin-top: 1.5em;
   border: 1px solid #f1eeee;
+  
   .table__cell {
     min-width: 100px;
     padding: 0px 8px;
@@ -49,6 +51,14 @@ table {
   }
   .observaciones-taller {
     min-width: 500px;
+  }
+
+  .cell-sticky-right-limit {
+    border-right: 2px solid lightgrey;
+  }
+
+  .cell-sticky-left-limit {
+    border-left: 2px solid lightgrey;
   }
 }
 
