--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.scss
@@ -40,10 +40,11 @@
 
 .table-wrapper {
   overflow: auto;
+  max-height: 80vh;
+  margin-top: 1.5em;
 }
 
 table {
-  margin-top: 1.5em;
   border: 1px solid #f1eeee;
 
   .table__cell {
@@ -57,6 +58,14 @@ table {
 
   .observaciones-taller {
     min-width: 500px;
+  }
+
+  .cell-sticky-right-limit {
+    border-right: 2px solid lightgrey;
+  }
+
+  .cell-sticky-left-limit {
+    border-left: 2px solid lightgrey;
   }
 }
 
@@ -80,12 +89,12 @@ td {
     margin: 0.5em 0;
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    padding: 1em;
+    padding: 0.5em 0.25em;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    font-weight: 400;
+    font-weight: 500;
     text-align: center;
     cursor: default;
   }
