--- a/src/app/main/pages/quality/analysis/tracing/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.html
@@ -33,7 +33,7 @@
 
                     <mat-form-field appearance="outline" class="container__form--input1">
                         <mat-label>Accion correctiva {{i}}</mat-label>
-                        <textarea matInput placeholder="Escribe..." readonly name="corrective" [(ngModel)]="item.corrective"></textarea>
+                        <textarea matInput placeholder="Escribe..." rows="3" readonly name="corrective" [(ngModel)]="item.corrective"></textarea>
                         <!-- <mat-error *ngIf="listAreaForm.get('corrective').errors">
                             Campo <strong>requerido.</strong>
                         </mat-error> -->
